# api-loan-django

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  README.md  compose.yaml  conftest.py  fly.toml  manage.py  pyproject.toml
.github/workflows/: cd.yml  ci-action.yml  ci.yml
contrib/: env-sample
onidata/: asgi.py  auth.py  settings.py  urls.py  wsgi.py
onidata/loans/: admin.py  apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
onidata/loans/migrations/: 0001_initial.py  0002_alter_loan_interest_rate_alter_loan_nominal_value_and_more.py  0003_alter_loan_client.py  0004_loan_identifier_payment_identifier.py  0005_alter_payment_payment_amount.py
onidata/loans/tests/: tests_admin.py  tests_loan.py  tests_payments.py
